k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exotic-travel
  labels:
    name: exotic-travel
    environment: production
